boilerplate PoC for cert management
