# config/crd/bases/tyk.tyk.io_apidefinitions.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.3.0
+    controller-gen.kubebuilder.io/version: v0.4.0
   creationTimestamp: null
   name: apidefinitions.tyk.tyk.io
 spec:
@@ -182,6 +182,21 @@ spec:
                 required:
                 - cache_timeout
                 type: object
+              certificate_secret_names:
+                description: CertificateSecretNames represents the names of the secrets
+                  that the controller should look for in the in the current namespace
+                  which contain the certificates.
+                items:
+                  type: string
+                type: array
+              certificates:
+                description: // +optional CORS              CORS     `json:"CORS"`
+                  Domain            string   `json:"domain"` Certificates is a list
+                  of Tyk Certificate IDs. e.g. mongo id. Use CertificateNames if using
+                  cert-manager
+                items:
+                  type: string
+                type: array
               custom_middleware:
                 properties:
                   auth_check:
@@ -291,8 +306,12 @@ spec:
                 - strip_path
                 type: object
               graphql:
-                description: GraphQLConfig is the root config object for a GraphQL
-                  API.
+                description: DoNotTrack        bool     `json:"do_not_track"` Tags              []string
+                  `json:"tags"` EnableContextVars bool     `json:"enable_context_vars"`
+                  ConfigData MapStringInterface `json:"config_data"` TagHeaders              []string        `json:"tag_headers"`
+                  GlobalRateLimit         GlobalRateLimit `json:"global_rate_limit"`
+                  StripAuthData           bool            `json:"strip_auth_data"`
+                  EnableDetailedRecording bool            `json:"enable_detailed_recording"`
                 properties:
                   enabled:
                     description: Enabled indicates if GraphQL proxy should be enabled.
