# controllers/apidefinition_controller.go
@@ -18,11 +18,13 @@ package controllers
 
 import (
 	"context"
+	"reflect"
+	"time"
+
+	v1 "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 	"k8s.io/apimachinery/pkg/util/intstr"
 	"k8s.io/utils/pointer"
-	"reflect"
-	"time"
 
 	tykv1alpha1 "github.com/TykTechnologies/tyk-operator/api/v1alpha1"
 	"github.com/TykTechnologies/tyk-operator/internal/universal_client"
@@ -120,6 +122,36 @@ func (r *ApiDefinitionReconciler) Reconcile(req ctrl.Request) (ctrl.Result, erro
 	}
 
 	r.applyDefaults(&desired.Spec)
+
+	// TODO: This logic belongs in a secret / cert controller
+	for _, name := range desired.Spec.CertificateSecretNames {
+		certSecret := &v1.Secret{}
+		if err := r.Get(ctx, types.NamespacedName{
+			Namespace: namespacedName.Namespace,
+			Name:      name,
+		}, certSecret); err != nil {
+			// cert doesn't exist yet
+			log.Error(err, "cant read secret with certificate")
+			return reconcile.Result{}, client.IgnoreNotFound(err)
+		}
+		tlsKey, ok := certSecret.Data["tls.key"]
+		if !ok {
+			// cert doesn't exist yet
+			log.Info("missing key")
+			return reconcile.Result{Requeue: true}, nil
+		}
+		tlsCrt, ok := certSecret.Data["tls.crt"]
+		if !ok {
+			// cert doesn't exist yet
+			log.Info("missing cert")
+			return reconcile.Result{Requeue: true}, nil
+		}
+		certID, err := universal_client.UploadCertificate(r.UniversalClient, tlsKey, tlsCrt)
+		if err != nil {
+			return reconcile.Result{Requeue: true}, err
+		}
+		log.Info("certificate uploaded", "id", certID)
+	}
 
 	//  If this is not set, means it is a new object, set it first
 	if desired.Status.ApiID == "" {
